--- a/estilos.css
+++ b/estilos.css
@@ -13,8 +13,8 @@ body {background: rgb(231, 231, 231);}
 
 
 .container-all {max-width: 1000px;
-   margin: auto;;
-   margin-top: 100px; }
+   margin-left: -5px;
+   margin-top: 10px; }
  
 .main-title {text-align: center; font-size: 40px;
               font-weight: 400;
