--- a/estilos.css
+++ b/estilos.css
@@ -9,15 +9,15 @@
 
 body {background: rgb(231, 231, 231);}
 
-.in-flex{min-width: 250px;}
+.in-flex{min-width: 450px;}
 
 
 .container-all {max-width: 1000px;
    margin-left: -60px;
-   margin-top: 10px; }
+   margin-top: 5px; }
  
-.main-title {text-align: center; font-size: 30px;
-              font-weight: 400;
+.main-title {text-align: center; font-size: 20px;
+              font-weight:400;
           }
 
  
@@ -37,7 +37,7 @@ body {background: rgb(231, 231, 231);}
 .box{width: 250px;
       height:  180px;
      padding: 20px;
-     margin: 10px;
+     margin: 5px;
      background:#fff 20px;
      text-align: center;
      position: relative;
@@ -73,7 +73,8 @@ body {background: rgb(231, 231, 231);}
 
         color: white;
         font-size: 30px;
-        transform: translateY(0);
+        transform: translateY(40);
+        
 
 }
 
@@ -82,12 +83,15 @@ body {background: rgb(231, 231, 231);}
 
 .box h4{font-size: 30px;
     transform: translateY(30px);
+    margin-top: -50px;
 }
 
 .box:hover h4{
 
    transform: translateY(0);
    color: white;
+   margin-top: -30px;
+    
 }
 
 
@@ -135,7 +139,7 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 /*box1*/
 
-.box1 .icon{color: #3dc315}
+.box1 .icon{color: #3dc315;}
 
 .box1 .background-hover{background: linear-gradient(to bottom, #3dc315, #fdb42a )}
 
@@ -174,3 +178,6 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 .box6 .icon{color: #5980d8}
 
 .box6 .background-hover{background: linear-gradient(to bottom, #5980d8, #27324d )}
+
+
+.ararat{margin-right: 15px;}
