--- a/estilos.css
+++ b/estilos.css
@@ -28,7 +28,7 @@ body {background: rgb(231, 231, 231);}
                 }
 
 
-.container-box a{
+.container-box {
 
    text-decoration: none;
    color: #000;
@@ -117,7 +117,7 @@ height: 100px;
 background: red;
 position: absolute;
 top: 250px;
-left: -170;
+left: -70;
 border-radius: 100%;
 transition: all 300ms;
 background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
@@ -178,5 +178,23 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 .box6 .background-hover {background: linear-gradient(to bottom, #3dc315, #fdb42a )}
 
+/*box7*/
+.box7 .icon{color: #00d3d3}
+
+.box7 .background-hover {background: linear-gradient(to bottom, #00d3d3, #0090ea );  top: -170px;
+   left: -250px;}
+
+
+/*box8*/
+.box8 .icon{color: #d300cb; }
+
+.box8 .background-hover{background: linear-gradient(to bottom, #d300cb, #9d00f0 ); top: 170px;
+   left: 500px;}
+
+/*box9*/
+.box9 .icon{color: #dd0f0f}
+
+.box9 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+   left: 500px;}
 
  
