--- a/estilos.css
+++ b/estilos.css
@@ -17,7 +17,7 @@ body {background: rgb(231, 231, 231);}
    margin-top: 15px; }
  
 .main-title {text-align: center; font-size: 24px;
-              font-weight:400;
+              font-weight:400px;
           }
 
  
@@ -44,7 +44,14 @@ body {background: rgb(231, 231, 231);}
     overflow: hidden;
      cursor: pointer;
      transition: all 300ms;
+      
    }
+
+
+
+
+    
+   .box img{object-fit: cover;}
    
 
 
