--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -9,15 +9,15 @@
 
 body {background: rgb(231, 231, 231);}
 
-.in-flex{min-width: 250px;}
+.in-flex{min-width: 450px;}
 
 
 .container-all {max-width: 1000px;
-   margin: auto;;
-   margin-top: 100px; }
+   margin: auto;
+   margin-top: 15px; }
  
-.main-title {text-align: center; font-size: 40px;
-              font-weight: 400;
+.main-title {text-align: center; font-size: 24px;
+              font-weight:400px;
           }
 
  
@@ -28,7 +28,7 @@ body {background: rgb(231, 231, 231);}
                 }
 
 
-.container-box a{
+.container-box {
 
    text-decoration: none;
    color: #000;
@@ -37,14 +37,21 @@ body {background: rgb(231, 231, 231);}
 .box{width: 250px;
       height:  180px;
      padding: 20px;
-     margin: 20px;
+     margin: 15px;
      background:#fff 20px;
      text-align: center;
      position: relative;
     overflow: hidden;
      cursor: pointer;
      transition: all 300ms;
+      
    }
+
+
+
+
+    
+   .box img{object-fit: cover;}
    
 
 
@@ -73,7 +80,8 @@ body {background: rgb(231, 231, 231);}
 
         color: white;
         font-size: 30px;
-        transform: translateY(0);
+        transform: translateY(40);
+        
 
 }
 
@@ -82,12 +90,15 @@ body {background: rgb(231, 231, 231);}
 
 .box h4{font-size: 30px;
     transform: translateY(30px);
+    margin-top: -50px;
 }
 
 .box:hover h4{
 
    transform: translateY(0);
    color: white;
+   margin-top: -30px;
+    
 }
 
 
@@ -113,7 +124,7 @@ height: 100px;
 background: red;
 position: absolute;
 top: 250px;
-left: -170;
+left: -70;
 border-radius: 100%;
 transition: all 300ms;
 background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
@@ -133,11 +144,11 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 /* cambiar color de las diferentes cajas */
 
-/*box1*/
+/*box1
 
-.box1 .icon{color: #3dc315}
+.box1 .icon{color: #3dc315;}
 
-.box1 .background-hover{background: linear-gradient(to bottom, #3dc315, #fdb42a )}
+.box1 .background-hover{background: linear-gradient(to bottom, #3dc315, #fdb42a )} */
 
 /*box2*/
 
@@ -167,10 +178,52 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 .box5 .icon{color: #e33a67}
 
-.box5 .background-hover{background: linear-gradient(to bottom, #e33a67, #ea003f )}
+.box5 .background-hover{background: linear-gradient(to bottom, #e33a67, #ea003f ); top: 170px;
+   left: 500px;}
 
 /*box6*/
+.box6 .icon{color: #3dc315;}
 
-.box6 .icon{color: #5980d8}
+.box6 .background-hover {background: linear-gradient(to bottom, #3dc315, #fdb42a ); top: 170px;
+   left: 500px;}
 
-.box6 .background-hover{background: linear-gradient(to bottom, #5980d8, #27324d )}
+/*box7*/
+.box7 .icon{color: #00d3d3}
+
+.box7 .background-hover {background: linear-gradient(to bottom, #00d3d3, #0090ea );  top: -170px;
+   left: -250px;}
+
+
+/*box8*/
+.box8 .icon{color: #d300cb; }
+
+.box8 .background-hover{background: linear-gradient(to bottom, #d300cb, #9d00f0 ); top: 170px;
+   left: 500px;}
+
+/*box9*/
+.box9 .icon{color: #3dc315;}
+
+.box9 .background-hover{background: linear-gradient(to bottom, #3dc315, #fdb42a );  top: -170px;
+   left: 500px;}
+
+
+   /*box10*/
+.box10 .icon{color: #00d3d3}
+
+.box10 .background-hover{background: linear-gradient(to bottom, #00d3d3, #0090ea );  top: -170px;
+   left: 500px;}
+
+
+   /*box11*/
+.box11 .icon{color:#d300cb}
+
+.box11 .background-hover{background: linear-gradient(to bottom, #d300cb, #9d00f0 );  top: -170px;
+   left: 500px;}
+
+
+   /*box12*/
+.box12 .icon{color: #dd0f0f}
+
+.box12 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+   left: 500px;}
+ 
