--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -34,11 +34,11 @@ body {background: rgb(231, 231, 231);}
    color: #000;
 }
 
-.box{width: 250px;
-      height:  180px;
+.box{width: 280px;
+      height:  210px;
      padding: 20px;
      margin: 15px;
-     background:#fff 20px;
+     background:rgb(226, 226, 226) 20px;
      text-align: center;
      position: relative;
     overflow: hidden;
@@ -88,7 +88,7 @@ body {background: rgb(231, 231, 231);}
 .box h4,
 .box p{margin-top: -3px;}
 
-.box h4{font-size: 30px;
+.box h4{font-size: 36px;
     transform: translateY(30px);
     margin-top: -50px;
 }
@@ -96,14 +96,14 @@ body {background: rgb(231, 231, 231);}
 .box:hover h4{
 
    transform: translateY(0);
-   color: white;
+   color:  black;
    margin-top: -30px;
     
 }
 
 
 
-.box p{font-size: 18px;
+.box p{font-size: 24px;
         transform: translateY(100px);
         opacity: 0;
 
@@ -115,7 +115,7 @@ body {background: rgb(231, 231, 231);}
 
    transform: translateY(0);
    opacity: 1;
-   color: white;
+   color: black;
 }
 
 .box .background-hover{
