--- a/estilos.css
+++ b/estilos.css
@@ -98,7 +98,7 @@ body {background: rgb(231, 231, 231);}
 
    transform: translateY(0);
    color:  rgb(0, 0, 0);
-   margin-top: -55px;
+   margin-top: -20px;
     
 }
 
@@ -235,53 +235,53 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
      /*box13*/
 .box13 .icon{color: #dd0f0f}
 
-.box13 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box13 .background-hover{background: linear-gradient(to bottom, #cf302a, #eccb6e);  top: -170px;
    left: 500px;}
 
         /*box14*/
 .box14 .icon{color: #dd0f0f}
 
-.box14 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box14 .background-hover{background: linear-gradient(to bottom, #e0782f, #88553a );  top: -170px;
    left: 500px;}
 
 
         /*box15*/
 .box15 .icon{color: #dd0f0f}
 
-.box15 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box15 .background-hover{background: linear-gradient(to bottom, #c9bbae, #89aed8 );  top: -170px;
    left: 500px;}
  
 
          /*box16*/
 .box16 .icon{color: #dd0f0f}
 
-.box16 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box16 .background-hover{background: linear-gradient(to bottom, #bbb88f, #97948d );  top: -170px;
    left: 500px;}
 
          /*box17*/
 .box17 .icon{color: #dd0f0f}
 
-.box17 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box17 .background-hover{background: linear-gradient(to bottom, #fd5797, #f0d44f );  top: -170px;
    left: 500px;}
 
          /*box18*/
 .box18 .icon{color: #dd0f0f}
 
-.box18 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box18 .background-hover{background: linear-gradient(to bottom, #457373, #f5c538 );  top: -170px;
    left: 500px;}
 
 
        /*box19*/
 .box19 .icon{color: #dd0f0f}
 
-.box19 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box19 .background-hover{background: linear-gradient(to bottom, #fdd422, #5fc442 );  top: -170px;
    left: 500px;}
 
 
        /*box20*/
 .box20 .icon{color: #dd0f0f}
 
-.box20 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box20 .background-hover{background: linear-gradient(to bottom, #eeeed2, #d23d5a );  top: -170px;
    left: 500px;}
 
 
@@ -295,21 +295,21 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
         /*box22*/
 .box22 .icon{color: #dd0f0f}
 
-.box22 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box22 .background-hover{background: linear-gradient(to bottom, #ff4e30, #ff1b1d );  top: -170px;
    left: 500px;}
 
 
        /*box23*/
 .box23 .icon{color: #dd0f0f}
 
-.box23 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box23 .background-hover{background: linear-gradient(to bottom, #cad83b, #c3d100);  top: -170px;
    left: 500px;}
 
 
        /*box24*/
 .box24 .icon{color: #dd0f0f}
 
-.box24 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box24 .background-hover{background: linear-gradient(to bottom, #ff8d34, #fe5f01 );  top: -170px;
    left: 500px;}
 
 
@@ -323,32 +323,32 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
      /*box26*/
 .box26 .icon{color: #dd0f0f}
 
-.box26 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box26 .background-hover{background: linear-gradient(to bottom, #ff4d8e, #ff0075 );  top: -170px;
    left: 500px;}
 
 
      /*box27*/
 .box27 .icon{color: #dd0f0f}
 
-.box27 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box27 .background-hover{background: linear-gradient(to bottom, #97cf84, #46b54c );  top: -170px;
    left: 500px;}
 
      /*box28*/
 .box28 .icon{color: #dd0f0f}
 
-.box28 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box28 .background-hover{background: linear-gradient(to bottom, #52afdb, #0197ca );  top: -170px;
    left: 500px;}
 
      /*box29*/
 .box29 .icon{color: #dd0f0f}
 
-.box29 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box29 .background-hover{background: linear-gradient(to bottom, #fecb7c, #f8af3c );  top: -170px;
    left: 500px;}
 
      /*box30*/
 .box31 .icon{color: #dd0f0f}
 
-.box31 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box31 .background-hover{background: linear-gradient(to bottom, #ef8081, #fae389 );  top: -170px;
    left: 500px;}
 
     /*box31*/
@@ -360,20 +360,20 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
     /*box32*/
 .box32 .icon{color: #dd0f0f}
 
-.box32 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box32 .background-hover{background: linear-gradient(to bottom, #fc5c9c, #ba53de);  top: -170px;
    left: 500px;}
 
     /*box33*/
 .box33 .icon{color: #dd0f0f}
 
-.box33 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box33 .background-hover{background: linear-gradient(to bottom, #a7ff83, #17b978 );  top: -170px;
    left: 500px;}
 
 
     /*box34*/
 .box34 .icon{color: #dd0f0f}
 
-.box34 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box34 .background-hover{background: linear-gradient(to bottom, #f3558e, #9c1de7 );  top: -170px;
    left: 500px;}
 
 
@@ -381,7 +381,7 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
     /*box35*/
 .box35 .icon{color: #dd0f0f}
 
-.box35 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box35 .background-hover{background: linear-gradient(to bottom, #f3558e, #9c1de7 );  top: -170px;
    left: 500px;}
 
 
@@ -389,48 +389,32 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
     /*box36*/
 .box36 .icon{color: #dd0f0f}
 
-.box36 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box36 .background-hover{background: linear-gradient(to bottom, #f3558e, #9c1de7 );  top: -170px;
    left: 500px;}
 
       /*box37*/
 .box37 .icon{color: #dd0f0f}
 
-.box37 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box37 .background-hover{background: linear-gradient(to bottom, #43dde6, #364f6b );  top: -170px;
    left: 500px;}
 
       /*box38*/
 .box38 .icon{color: #dd0f0f}
 
-.box38 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box38 .background-hover{background: linear-gradient(to bottom, #9c8adc, #461cae );  top: -170px;
    left: 500px;}
 
       /*box39*/
 .box39 .icon{color: #dd0f0f}
 
-.box39 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box39 .background-hover{background: linear-gradient(to bottom, #fcf463, #fbeb00 );  top: -170px;
    left: 500px;}
 
       /*box40*/
 .box40 .icon{color: #dd0f0f}
 
-.box40 .background-hover{background: linear-gradient(to bottom, #dd0f0f, #ffa700 );  top: -170px;
+.box40 .background-hover{background: linear-gradient(to bottom, #e495cc, #c32c93 );  top: -170px;
    left: 500px;}
 
-   .search-box{position: relative; display: grid; top: 50%; left: 50%;
-   transform: translate(-50%,-50%); height: 40px; background: coral;
-    padding: 20px; justify-content: center;}
-
-    .search-btn{
-       color:greenyellow ;
-       float: right;
-       width: 40px;
-       height: 40px;
-       border-radius: 50%;
-       display: flex;
-       justify-content: center;
-       align-items: center;
-
-
-    }
-
  
+   
