--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -430,4 +430,6 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 .armenio1{color: red;}
 .armenio2{color: red}
 
-.container123{width: 300px; height: 150px; font-size: 86px;}         
+.container123{    position: relative; padding: 40px;   ; }
+.ubicacion123   {width: 400px;height: 50px; font-size: 22px; color: #000; } 
+       
