--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -430,6 +430,7 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 .armenio1{color: red;}
 .armenio2{color: red}
 
-.container123{    position: relative; padding: 40px;   ; }
-.ubicacion123   {width: 400px;height: 50px; font-size: 22px; color: #000; } 
-       
+.container123{ position: relative; margin-top: 25px ; padding: 20px;  }
+
+.ubicacion123{width: 370px; height:  35px; font-size: 24px;
+              border: solid black 2px;}   
