--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -55,58 +55,58 @@ animation: burbujas 3s linear infinite;
              animation-duration: 9s; animation-delay: 0.2s;}
 
 .burbuja:nth-child(2){font-size: 25px; left: 35%;
-              animation-duration: 7s; animation-delay: 5s;}
+              animation-duration: 12s; animation-delay: 5s;}
               
 .burbuja:nth-child(3){font-size: 18px; left: 85%;
-animation-duration: 8s; animation-delay: 2s;}
+animation-duration: 8s; animation-delay: 3.6s;}
 
 .burbuja:nth-child(4){font-size: 28px; left: 65%;
-animation-duration: 9s; animation-delay: 0.3s;}
+animation-duration: 9s; animation-delay: 1s;}
 
 .burbuja:nth-child(5){font-size: 14px; left: 55%;
-animation-duration: 6s; animation-delay: 3.1s;}
+animation-duration: 9s; animation-delay: 4.5s;}
 
 .burbuja:nth-child(6){font-size: 20px; left: 25%;
-animation-duration: 11s; animation-delay: 0.5s;}
+animation-duration: 11s; animation-delay: 7.8s;}
 
 .burbuja:nth-child(7){font-size: 18px; left: 50%;
-animation-duration: 12s; animation-delay: 2.5s;}
+animation-duration: 12s; animation-delay: 4.8s;}
 
 .burbuja:nth-child(8){font-size: 22px; left: 15%;
-   animation-duration: 8s; animation-delay: 0.2s;}
+   animation-duration: 8s; animation-delay: 7.5s;}
 
 .burbuja:nth-child(9){font-size: 24px; left: 47%;
-   animation-duration: 10s; animation-delay: 1s;}
+   animation-duration: 10s; animation-delay: 8s;}
 
 .burbuja:nth-child(10){font-size: 15px; left: 72%;
    animation-duration: 8s; animation-delay: 2s;}
 
 .burbuja:nth-child(11){font-size: 19px; left: 62%;
-      animation-duration: 9s; animation-delay: 0.8s;}
+      animation-duration: 9s; animation-delay: 5s;}
 
 .burbuja:nth-child(12){font-size: 23px; left: 58%;
-     animation-duration: 11s; animation-delay: 1.2s;}
+     animation-duration: 11s; animation-delay: 3s;}
 
 .burbuja:nth-child(13){font-size: 27px; left: 81%;
-    animation-duration: 12s; animation-delay: 1.4s;}
+    animation-duration: 12s; animation-delay: 1s;}
 
 .burbuja:nth-child(14){font-size: 18px; left: 26%;
-     animation-duration: 7s; animation-delay: 0.2s;}
+     animation-duration: 7s; animation-delay: 7s;}
 
 .burbuja:nth-child(15){font-size: 16px; left: 14%;
-    animation-duration: 8s; animation-delay: 1.8s;}
+    animation-duration: 8s; animation-delay: 9.6s;}
 
 .burbuja:nth-child(16){font-size: 22px; left: 15%;
-    animation-duration: 10s; animation-delay: 1.4s;}
+    animation-duration: 10s; animation-delay: 4.5s;}
 
 .burbuja:nth-child(17){font-size: 25px; left: 20%;
-   animation-duration: 11s; animation-delay: 1.6s;}
+   animation-duration: 11s; animation-delay: 6s;}
 
 .burbuja:nth-child(18){font-size: 12px; left: 27%;
-     animation-duration: 16s; animation-delay: 0.7s;}
+     animation-duration: 16s; animation-delay: 4s;}
 
 .burbuja:nth-child(19){font-size: 21px; left: 50%;
-   animation-duration: 11s; animation-delay: 0.5s;}
+   animation-duration: 11s; animation-delay: 2s;}
 
 .burbuja:nth-child(20){font-size: 18px; left: 93%;
     animation-duration: 14s; animation-delay: 0.3s;}
@@ -130,11 +130,15 @@ animation-duration: 12s; animation-delay: 2.5s;}
           opacity: 0.3;
 
 
-   } 30%{transform: translateX(30px);}
+   }15%{transform: translateX(20px);}
+   
+   
+   30%{transform: translateX(15px);}
+
    50%{  opacity: 2; 
 
 
-   }65%{transform: translateX(-15px);}
+   }70%{transform: translateX(-10px);}
 
     100%{
        bottom: 100vh;
