--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -162,7 +162,7 @@ body {background: rgb(231, 231, 231);}
    margin-top: 15px; }
  
 .main-title {text-align: center; font-size: 24px;
-              font-weight:400px;
+              font-weight:400px; 
           }
 
  
@@ -189,6 +189,8 @@ body {background: rgb(231, 231, 231);}
     overflow: hidden;
      cursor: pointer;
      transition: all 300ms;
+     
+     
       
    }
 
@@ -205,7 +207,7 @@ body {background: rgb(231, 231, 231);}
 .box:hover{
 
      transform: translate(5px, -5px);
-     box-shadow: -10px 10px 20px -10px rgba(0, 0, 0, 0.5);
+     box-shadow: -10px 10px 20px -10px rgba(0, 0, 0, 0.5); 
 }
 
 
@@ -213,7 +215,7 @@ body {background: rgb(231, 231, 231);}
 .box  h4,
 .box p{position: relative;
        z-index: 1;
-       transition: all 200ms;
+       transition: all 200ms; 
 
 }
 
@@ -232,7 +234,7 @@ body {background: rgb(231, 231, 231);}
                }
 
 .box h4,
-.box p{margin-top: -10px;}
+.box p{margin-top: -10px; }
 
 .box h4{font-size: 36px;
     transform: translateY(30px);
@@ -296,10 +298,12 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 /*box1*/
 
+  
+
 .box1 .icon{color: #3dc315;}
 
 .box1 .background-hover{background: linear-gradient(to bottom, #3dc315, #fdb42a );  bottom: -170px;
-  right: -250px;}
+  right: -250px; }
 
 
 /*box2*/
@@ -579,3 +583,18 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 .ubicacion123{width: 365px; height:  35px; font-size: 24px;
               border: solid black 2px;}   
+
+
+.box145{width: 350px; height: 250px; background: #cbd3d3;
+        margin: auto; margin-top:200px; font-size: 65px;}
+
+              ul{padding: 5px;  top:50%; left: 50%;   
+               transform: translateX(10%) translateY(660%);}
+           
+           ul li{list-style: none; float: left;
+                  transition: 2s;}
+           
+                  ul:hover .rotacion {transform: rotateY(360deg);}
+
+                  .ararat{font-size: 24px;padding: 5px;  top:50%; left: 50%;   
+                     transform: translateX(40%) translateY(70%);}
