--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -585,16 +585,27 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
               border: solid black 2px;}   
 
 
+.apoya{width: 350px; height: 40px; background: #949999; font-size: 16px;
+                     padding: 5px;  top:50%; left: 50%;   
+                   transform: translateX(145%) translateY(630%);}
+
+.click2 {width: 140px; height: 35px; background: black;
+          color: gray; font-size: 16px;
+           font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+           padding: 5px;  top:50%; left: 50%;   
+           transform: translateX(440%) translateY(50%);}
+
+
 .box145{width: 350px; height: 250px; background: #cbd3d3;
-        margin: auto; margin-top:200px; font-size: 65px;}
+        margin: auto; margin-top:200px; font-size: 45px;}
 
               ul{padding: 5px;  top:50%; left: 50%;   
-               transform: translateX(10%) translateY(660%);}
+               transform: translateX(20%) translateY(660%);}
            
            ul li{list-style: none; float: left;
                   transition: 2s;}
            
-                  ul:hover .rotacion {transform: rotateY(360deg);}
+                  ul:hover .rotacion {transform: rotateY(360deg); color: red;}
 
-                  .ararat{font-size: 24px;padding: 5px;  top:50%; left: 50%;   
-                     transform: translateX(40%) translateY(70%);}
+                  .ararat{font-size: 20px;padding: 5px;  top:50%; left: 50%;   
+                     transform: translateX(-14%) translateY(390%);}
