--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -585,11 +585,11 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
               border: solid black 2px;}   
 
 
-.apoya{width: 350px; height: 40px; background: #949999; font-size: 16px;
+.apoya{position: absolute; width: 350px; height: 40px; background: #949999; font-size: 16px;
                      padding: 5px;  top:50%; left: 50%;   
                    transform: translateX(145%) translateY(630%);}
 
-.click2 {width: 140px; height: 35px; background: black;
+.click2 {position: absolute; width: 140px; height: 35px; background: black;
           color: gray; font-size: 16px;
            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
            padding: 5px;  top:50%; left: 50%;   
@@ -597,7 +597,7 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 
 .box145{width: 350px; height: 250px; background: #cbd3d3;
-        margin: auto; margin-top:200px; font-size: 45px;}
+        margin: auto; margin-top:200px; font-size: 45px; position: relative;}
 
               ul{padding: 5px;  top:50%; left: 50%;   
                transform: translateX(20%) translateY(660%);}
@@ -607,5 +607,5 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
            
                   ul:hover .rotacion {transform: rotateY(360deg); color: red;}
 
-                  .ararat{font-size: 20px;padding: 5px;  top:50%; left: 50%;   
+                  .ararat{position: absolute; font-size: 20px;padding: 5px;  top:50%; left: 50%;   
                      transform: translateX(-14%) translateY(390%);}
