--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -585,15 +585,7 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
               border: solid black 2px;}   
 
 
-.apoya{position: absolute; width: 350px; height: 40px; background: #949999; font-size: 16px;
-                     padding: 5px;  top:50%; left: 50%;   
-                   transform: translateX(145%) translateY(630%);}
 
-.click2 {position: absolute; width: 140px; height: 35px; background: black;
-          color: gray; font-size: 16px;
-           font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-           padding: 5px;  top:50%; left: 50%;   
-           transform: translateX(440%) translateY(50%);}
 
 
 .box145{width: 350px; height: 250px; background: #cbd3d3;
@@ -607,5 +599,13 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
            
                   ul:hover .rotacion {transform: rotateY(360deg); color: red;}
 
-                  .ararat{position: absolute; font-size: 20px;padding: 5px;  top:50%; left: 50%;   
-                     transform: translateX(-14%) translateY(390%);}
+                  .ararat{position: absolute; font-size: 20px;padding: 5px;
+                       margin-top: 150px; margin-left: 150px;}
+
+                     .apoya{position: absolute; width: 350px; height: 40px; background: #949999; font-size: 16px;
+                     padding: 5px;  margin-top: 15px; margin-left: px;}
+
+.click2 {position: absolute; width: 140px; height: 35px; background: black;
+          color: gray; font-size: 16px;
+           font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+           padding: 5px;  margin-top: 260px; margin-left: 100px;  }
