--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -600,12 +600,13 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
                   ul:hover .rotacion {transform: rotateY(360deg); color: red;}
 
                   .ararat{position: absolute; font-size: 20px;padding: 5px;
-                       margin-top: 150px; margin-left: 150px;}
+                       margin-top: 150px; margin-left: 140px;}
 
                      .apoya{position: absolute; width: 350px; height: 40px; background: #949999; font-size: 16px;
                      padding: 5px;  margin-top: 15px; margin-left: px;}
 
-.click2 {position: absolute; width: 140px; height: 35px; background: black;
+.click2 {position: absolute; width: 50px; height: 50px; background: black; border-radius: 50%;
           color: gray; font-size: 16px;
            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-           padding: 5px;  margin-top: 260px; margin-left: 100px;  }
+           padding: 5px;  margin-top: 260px; margin-left: 150px;  }
+.click123{margin-top: 10px; margin-left: -1px; }
