--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -11,10 +11,11 @@
               margin-top: 180px; font-family: Arial, Helvetica, sans-serif;
               }
 
-.letras12{opacity: .7;position: absolute; transform: translateX(35px); margin-top: 50px;}
+.letras12{opacity: .7;position: absolute; transform: translateX(30px); margin-top: 50px;}
 
 .click{width: 80px; height: 35px; background: #00ffff ;position:  absolute;
-          transform: translateX(160px); margin-top: 130px; border-radius: 8%; }
+          transform: translateX(160px); margin-top: 130px; border-radius: 5%; 
+          box-shadow: 3px 2px 1px 1px rgba(0, 0, 0, 0.2) }
 
 .click12{font-family: Arial, Helvetica, sans-serif; color: #000; opacity: 0.9;
    opacity: .8;position: absolute; transform: translateX(22px);
@@ -79,7 +80,7 @@ animation-duration: 12s; animation-delay: 4.8s;}
    animation-duration: 10s; animation-delay: 8s;}
 
 .burbuja:nth-child(10){font-size: 15px; left: 72%;
-   animation-duration: 8s; animation-delay: 2s;}
+   animation-duration: 8s; animation-delay: 0.2s;}
 
 .burbuja:nth-child(11){font-size: 19px; left: 62%;
       animation-duration: 9s; animation-delay: 5s;}
@@ -88,7 +89,7 @@ animation-duration: 12s; animation-delay: 4.8s;}
      animation-duration: 11s; animation-delay: 3ms;}
 
 .burbuja:nth-child(13){font-size: 27px; left: 81%;
-    animation-duration: 12s; animation-delay: 1s;}
+    animation-duration: 12s; animation-delay: 0.4s;}
 
 .burbuja:nth-child(14){font-size: 18px; left: 26%;
      animation-duration: 7s; animation-delay: 7s;}
@@ -103,7 +104,7 @@ animation-duration: 12s; animation-delay: 4.8s;}
    animation-duration: 11s; animation-delay: 6s;}
 
 .burbuja:nth-child(18){font-size: 12px; left: 27%;
-     animation-duration: 16s; animation-delay: 4ms;}
+     animation-duration: 16s; animation-delay: 2ms;}
 
 .burbuja:nth-child(19){font-size: 21px; left: 50%;
    animation-duration: 11s; animation-delay: 2s;}
@@ -605,8 +606,10 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
                      .apoya{position: absolute; width: 350px; height: 40px; background: #949999; font-size: 16px;
                      padding: 5px;  margin-top: 15px; margin-left: px;}
 
-.click2 {position: absolute; width: 50px; height: 50px; background: black; border-radius: 50%;
+.click2 {position: absolute; width: 70px; height: 40px; background: black;
           color: gray; font-size: 16px;
            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-           padding: 5px;  margin-top: 260px; margin-left: 150px;  }
-.click123{margin-top: 10px; margin-left: -1px; }
+           padding: 5px;  margin-top: 260px; margin-left: 140px; border-radius: 5%; 
+           box-shadow: 3px 2px 1px 1px rgba(0, 0, 0, 0.5) ;}
+
+.click123{margin-top: 5px; margin-left: 6px; }
