--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -11,14 +11,14 @@
               margin-top: 180px; font-family: Arial, Helvetica, sans-serif;
               }
 
-.letras12{opacity: .7;position: absolute; transform: translateX(30px); margin-top: 50px;}
+.letras12{opacity: .7;position: absolute; transform: translateX(28px); margin-top: 50px;}
 
 .click{width: 80px; height: 35px; background: #00ffff ;position:  absolute;
-          transform: translateX(160px); margin-top: 130px; border-radius: 5%; 
+          transform: translateX(150px); margin-top: 130px; border-radius: 5%; 
           box-shadow: 3px 2px 1px 1px rgba(0, 0, 0, 0.2) }
 
 .click12{font-family: Arial, Helvetica, sans-serif; color: #000; opacity: 0.9;
-   opacity: .8;position: absolute; transform: translateX(22px);
+   opacity: .8;position: absolute; transform: translateX(18px);
     margin-top: 9px;  text-decoration: none;}
 
 #aaa {color: #58eef3;} 
@@ -610,6 +610,22 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
           color: gray; font-size: 16px;
            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
            padding: 5px;  margin-top: 260px; margin-left: 140px; border-radius: 5%; 
-           box-shadow: 3px 2px 1px 1px rgba(0, 0, 0, 0.5) ;}
+           box-shadow: 3px 2px 1px 1px rgba(0, 0, 0, 0.3) ;}
 
 .click123{margin-top: 5px; margin-left: 6px; }
+
+
+
+.box146{width: 350px; height: 250px; background: #cbd3d3;
+   margin: auto; margin-top:200px; font-size: 45px; position: relative;}
+
+         ul{padding: 5px;  top:50%; left: 50%;   
+          transform: translateX(30%) translateY(660%);}
+      
+      ul li{list-style: none; float: left;
+             transition: 2s;}
+      
+             ul:hover .rotacion {transform: rotateY(360deg); color: red;}
+
+             .hola{position: absolute; font-size: 20px;padding: 5px;
+               margin-top: 150px; margin-left: 150px;}
