--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -589,7 +589,7 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 
 
-.box145{width: 350px; height: 250px; background: #cbd3d3;
+.box145{box-sizing: border-box; width: 350px; height: 250px; background: #cbd3d3;
         margin: auto; margin-top:200px; font-size: 45px; position: relative;}
 
               ul{padding: 5px;  top:50%; left: 50%;   
@@ -616,7 +616,7 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 
 
-.box146{width: 350px; height: 250px; background: #cbd3d3;
+.box146{box-sizing: border-box; width: 350px; height: 250px; background: #cbd3d3;
    margin: auto; margin-top:200px; font-size: 45px; position: relative;}
 
      .araratmasis{padding: 5px;  top:50%; left: 50%;   
@@ -636,7 +636,7 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 
 /* karun */
 
-.box147{width: 350px; height: 250px; background: #cbd3d3;
+.box147{box-sizing: border-box; width: 350px; height: 250px; background: #cbd3d3;
    margin: auto; margin-top:200px; font-size: 45px; position: relative;}
 
    ul li{list-style: none; float: left;
@@ -650,4 +650,18 @@ background: linear-gradient(to bottom, rgb(225, 115, 0), rgb(255, 148, 48));
 .primavera{position: absolute; font-size: 20px;padding: 5px;
    margin-top: 150px; margin-left: 130px;}
 
+/* tram */
 
+.box148{box-sizing: border-box; width: 350px; height: 250px; background: #cbd3d3;
+   margin: auto; margin-top:200px; font-size: 45px; position: relative;}
+
+   ul li{list-style: none; float: left;
+      transition: 2s;}
+
+      ul:hover .rotacion {transform: rotateY(360deg); color: red;}
+
+.tramdur{padding: 5px;  top:50%; left: 50%;   
+   transform: translateX(32%) translateY(660%);}
+
+.dinero{position: absolute; font-size: 20px;padding: 5px;
+   margin-top: 150px; margin-left: 140px;}
